--- a/action.yml
+++ b/action.yml
@@ -29,7 +29,7 @@ runs:
       run: |
         IFS=$'\n'
         for cmd in $(echo "${{ inputs.commands }}" | tr ',' '\n'); do
-          ./package-manager $cmd
+          ./au3pm.exe $cmd
           if [ $? -ne 0 ]; then
             exit 1
           fi
